--- a/index.html
+++ b/index.html
@@ -9,7 +9,54 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+
+    <div class="container">
+        [container-fluid]
+
+        <div class="row justify-content-center mx-auto">
+            <div class="col header">
+                [header]
+            </div>
+        </div>
+
+        <div class="row justify-content-center mx-auto">
+            <div class="col nav">
+                [nav]
+            </div>
+        </div>
+
+        <div class="row justify-content-center mx-auto">
+            <div class="col-md-8 content">
+                [content]
+            </div>
+            <div class="col-md-4 aside">
+                [aside]
+            </div>
+        </div>
+
+        <div class="row justify-content-center mx-auto">
+            <div class="col-md-3 promo">
+                [promo 1]
+            </div>
+            <div class="col-md-3 promo">
+                [promo 2]
+            </div>
+            <div class="col-md-3 promo">
+                [promo 3]
+            </div>
+            <div class="col-md-3 promo">
+                [promo 4]
+            </div>
+        </div>
+
+        <div class="row justify-content-center mx-auto">
+            <div class="col footer">
+                [footer]
+            </div>
+        </div>
+
+    </div>
+
     <script>src="js/bootstrap.js"</script>
     <script>src="js/bootstrap.min.js"</script>
 </body>
