--- a/index.html
+++ b/index.html
@@ -10,49 +10,54 @@
 </head>
 <body>
 
-    <div class="container">
+    <!-- WRAPPER -->
+
+    <div class="container-fluid">
         [container-fluid]
 
-        <div class="row justify-content-center mx-auto">
-            <div class="col header">
-                [header]
-            </div>
-        </div>
+        <div class="container">
 
-        <div class="row justify-content-center mx-auto">
-            <div class="col nav">
-                [nav]
-            </div>
-        </div>
+            <header class="row justify-content-center">
+                <div class="col-md-12 header">
+                    [header]
+                </div>
+            </header>
 
-        <div class="row justify-content-center mx-auto">
-            <div class="col-md-8 content">
-                [content]
-            </div>
-            <div class="col-md-4 aside">
-                [aside]
-            </div>
-        </div>
+            <nav class="row justify-content-center">
+                <div class="col-md-12 nav">
+                    [nav]
+                </div>
+            </nav>
 
-        <div class="row justify-content-center mx-auto">
-            <div class="col-md-3 promo">
-                [promo 1]
-            </div>
-            <div class="col-md-3 promo">
-                [promo 2]
-            </div>
-            <div class="col-md-3 promo">
-                [promo 3]
-            </div>
-            <div class="col-md-3 promo">
-                [promo 4]
-            </div>
-        </div>
+            <main class="row justify-content-center">
+                <div class="col-md-8 content">
+                    [content]
+                </div>
+                <aside class="col-md-4 aside">
+                    [aside]
+                </aside>
+            </main>
 
-        <div class="row justify-content-center mx-auto">
-            <div class="col footer">
-                [footer]
-            </div>
+            <section class="row justify-content-center">
+                <div class="col-md-3 col-xs-12 promo">
+                    [promo 1]
+                </div>
+                <div class="col-md-3 col-xs-12 promo">
+                    [promo 2]
+                </div>
+                <div class="col-md-3 col-xs-12 promo">
+                    [promo 3]
+                </div>
+                <div class="col-md-3 col-xs-12 promo">
+                    [promo 4]
+                </div>
+            </section>
+
+            <footer class="row justify-content-center">
+                <div class="col-md-12 footer">
+                    [footer]
+                </div>
+            </footer>
         </div>
 
     </div>
